Triquiñuela para que funcionen las request de API de salas que vienen de una forma super extraña Eliminado minicolors porque daba alertas de dependantbot API de usuarios
